<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.org.biblivre</groupId>
	<artifactId>biblivre-4</artifactId>
	<packaging>war</packaging>

	<name>Biblivre4</name>
	<version>5.1.32</version>
	<url>http://www.biblivre.org.br</url>

	<developers>
		<developer>
			<id>alberto</id>
			<name>Alberto Wagner Collavizza</name>
		</developer>
		<developer>
			<id>danniel</id>
			<name>Danniel Willian B. do Nascimento</name>
		</developer>
		<developer>
			<id>cleydyr</id>
			<name>Cleydyr B. de Albuquerque</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.8</jdk.version>
		<debug>false</debug>
		<sass.OutputStyle>compressed</sass.OutputStyle>
	</properties>

	<repositories>
		<repository>
			<id>legacy-libs</id>
			<url>file://${project.basedir}/lib</url>
		</repository>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>clojars.org</id>
			<url>http://clojars.org/repo</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>3.2.18.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>

		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>

		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
		</dependency>

		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>[1.3.3,)</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>[1.18,)</version>
		</dependency>

		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.2</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.6</version>
		</dependency>

		<dependency>
			<groupId>org.marc4j</groupId>
			<artifactId>marc4j</artifactId>
			<version>2.9.1</version>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>jzkit2_z3950_plugin</artifactId>
			<version>2.2.3</version>
			<exclusions>
				<exclusion>
					<artifactId>marc4j</artifactId>
					<groupId>marc4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>xalan</artifactId>
					<groupId>xalan</groupId>
				</exclusion>
				<exclusion>
					<artifactId>maven-antrun-plugin</artifactId>
					<groupId>org.apache.maven.plugins</groupId>
				</exclusion>
				<exclusion>
					<artifactId>ant</artifactId>
					<groupId>ant</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>jzkit2_core</artifactId>
			<version>2.2.3</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.juniversalchardet</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>1.0.3</version>
		</dependency>

		<dependency>
			<groupId>net.objectlab.kit</groupId>
			<artifactId>datecalc-common</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>net.objectlab.kit</groupId>
			<artifactId>datecalc-joda</artifactId>
			<version>1.2.0</version>
		</dependency>

		<dependency>
			<groupId>com.lowagie.legacy</groupId>
			<artifactId>itext</artifactId>
			<version>4.2.1</version>
		</dependency>

		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.28</version>
		</dependency>

		<dependency>
			<groupId>javax.measure</groupId>
			<artifactId>unit-api</artifactId>
			<version>2.0-EDR</version>
		</dependency>

		<dependency>
			<groupId>tech.units</groupId>
			<artifactId>indriya</artifactId>
			<version>2.0-EDR</version>
		</dependency>

		<!-- z3950server e suas dependências transitivas -->
		<!-- Embora elas não sejam explicitamente requisitadas no código, elas 
			são necessárias em tempo de execução pela biblioteca z3950server e suas dependências -->

		<dependency>
			<groupId>br.org.biblivre</groupId>
			<artifactId>z3950server</artifactId>
			<version>1.0.2</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-dbcp</artifactId>
					<groupId>commons-dbcp</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>a2j</artifactId>
			<version>2.0.4</version>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>jzkit2_service</artifactId>
			<version>2.2.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.jdbm</groupId>
			<artifactId>jdbm</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>jzkit2_jdbc_plugin</artifactId>
			<version>2.2.3</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.3.1</version>
		</dependency>
		<!-- / -->

	</dependencies>

	<build>
		<finalName>Biblivre4</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<debug>${debug}</debug>
					<optimize>!${debug}</optimize>
					<verbose>$false</verbose>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.2.3</version>
				<configuration>
					<webResources>
						<resource>
							<directory>WebContent</directory>
							<filtering>false</filtering>
							<excludes>
								<exclude>**/*.scss</exclude>
								<exclude>**/about_biblivre.jsp</exclude>
								<exclude>Tarefas.txt</exclude>
								<exclude>Traducoes - enUS.txt</exclude>
								<exclude>Traducoes - ptBR.txt</exclude>
								<exclude>Traducoes - es.txt</exclude>
							</excludes>
						</resource>
						<resource>
							<directory>WebContent</directory>
							<filtering>true</filtering>
							<includes>
								<include>**/about_biblivre.jsp</include>
							</includes>
						</resource>
					</webResources>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.gitlab.haynes</groupId>
				<artifactId>libsass-maven-plugin</artifactId>
				<version>0.2.24</version>
				<executions>
					<execution>
						<phase>generate-resources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<outputStyle>${sass.OutputStyle}</outputStyle>
					<inputPath>${basedir}/WebContent/static/styles/scss</inputPath>
					<outputPath>${basedir}/target/Biblivre4/static/styles</outputPath>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
